# fuellhorn

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .tributary.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  TESTING.md  WIZARD_IMPLEMENTATION_PLAN.md  alembic.ini  create_admin.py  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  fuellhorn-projekt-zusammenfassung.md  main.py  pyproject.toml  requirements.md  tech-stack.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  ci.yml  helm-tests.yaml  qa.yaml  release.yaml  tests.yaml  unlock-issues.yml
alembic/: env.py
alembic/versions/: 05ee025b32ea_add_category_table.py  094bc98ee7ff_remove_expiry_date_and_item_category.py  4a9f912e1477_add_item_and_itemcategory_tables.py  5a895943927c_add_color_field_to_location.py  5c90fbaec136_update_itemtype_enum_to_match_ui_konzept.py  7133d257dd27_add_location_table.py  83f2c87ee2a6_merge_heads.py  86ddeb1af50f_add_sort_order_to_category.py  95be42737cf2_add_withdrawal_table.py  b404d025312d_add_login_attempt_table_and_remove_.py  c800634c7cf4_add_user_preferences_and_system_settings.py  cc65fe88891e_drop_freeze_time_config_table.py  cce4a4601eec_add_freezetimeconfig_table.py  d34a94a28640_initial_schema.py  e427f74927c3_initial_migration_user_table.py
app/: __init__.py  cli.py  config.py  database.py  seed.py
app/alembic/: env.py
app/api/: __init__.py  health.py
app/auth/: __init__.py  decorators.py  dependencies.py  permissions.py
app/models/: __init__.py  category.py  category_shelf_life.py  freeze_time_config.py  item.py  location.py  login_attempt.py  system_settings.py  user.py  withdrawal.py
app/services/: __init__.py  auth_service.py  category_service.py  expiry_calculator.py  freeze_time_service.py  item_service.py  location_service.py  preferences_service.py  rate_limit_service.py  shelf_life_service.py
app/static/: manifest.json
app/ui/: __init__.py  auth.py  smart_defaults.py
app/ui/pages/: __init__.py  (+14 more)
app/utils/: security.py
artwork/: fuellhorn-design-system.html
charts/fuellhorn/: Chart.yaml  README.md  values.yaml
ci-guidelines/: fuellhorn-ci-guidelines.docx  fuellhorn-icons.html  fuellhorn-ui-components.html
ci-guidelines/fuellhorn-icons/: fuellhorn-icons.html
ci-guidelines/fuellhorn-logo-export/: index.html
docs/: TESTING.md  UI_COMPONENTS.md  UI_KONZEPT.md  data-model.md  requirements.md  shelf-life-defaults.md
docs/agent/: architektur_erklaert.md  aufgabenverwaltung.md  informationsarchitektur.md  tech_stack.md  tests_schreiben.md  ui_und_design.md
docs/deployment/: docker.md
docs/mockups/: item-card-redesign.html
scripts/: dev-server.sh  seed_shelf_life_defaults.py  seed_testdata.py  select-next-task.sh
tests/: conftest.py  test_cli.py  test_config.py  test_database_isolation.py
tests/test_api/: conftest.py  test_health.py
tests/test_auth/: test_dependencies.py
tests/test_e2e/: __init__.py  _server.py  conftest.py  test_item_card_swipe.py  test_login.py  test_swipe_demo.py  test_wizard.py
tests/test_pwa/: __init__.py  conftest.py  test_pwa_manifest.py
tests/test_services/: test_auth_service.py  test_category_service.py  test_category_shelf_life_model.py  test_expiry_calculator.py  test_expiry_calculator_minmax.py  test_expiry_status.py  test_expiry_thresholds.py  test_freeze_time_service.py  test_item_service.py  test_item_service_category_expiry.py  test_item_service_new.py  test_location_service.py  test_preferences_service.py  test_rate_limit_service.py  test_shelf_life_service.py
tests/test_ui/: __init__.py  conftest.py  test_bottom_sheet.py  test_categories.py  test_category_chips.py  test_dashboard.py  test_date_utils.py  test_edit_item.py  test_expiry_badge.py  test_freeze_times.py  test_icons.py  test_item_card.py  test_item_type_chips.py  test_item_wizard_step1.py  test_items_page.py  test_location_chips.py  test_location_overview.py  test_locations.py  test_login.py  test_logout.py  test_profile_page.py  test_recently_added.py  test_save_and_next.py  test_settings.py  test_unit_chips.py  test_user_dropdown.py  test_users.py  test_wizard_back_button.py  test_wizard_validation.py
tests/test_unit/: conftest.py  test_cli.py  test_colors.py  test_create_admin.py  test_icons.py  test_save_and_next.py  test_unit_chips.py
tests/test_utils/: test_security.py
tools/mcp-task-server/: README.md  pyproject.toml  server.py
(+45 files in other folders)
